# real_estate_agent

./: .env.local  README.md  pyproject.toml
src/crewai_real_estate_agent_with_gemini_integration/: crew.py  main.py
src/crewai_real_estate_agent_with_gemini_integration/config/: agents.yaml  tasks.yaml
