[project]
name = "crewai_real_estate_agent_with_gemini_integration"
version = "0.1.0"
description = "crewai_real_estate_agent_with_gemini_integration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crewai_real_estate_agent_with_gemini_integration = "crewai_real_estate_agent_with_gemini_integration.main:run"
run_crew = "crewai_real_estate_agent_with_gemini_integration.main:run"
train = "crewai_real_estate_agent_with_gemini_integration.main:train"
replay = "crewai_real_estate_agent_with_gemini_integration.main:replay"
test = "crewai_real_estate_agent_with_gemini_integration.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
